RESOLVED FIXED281697
[iPad] Unable to mute the video on hulu.com
https://bugs.webkit.org/show_bug.cgi?id=281697
Summary [iPad] Unable to mute the video on hulu.com
Eric Carlson
Reported 2024-10-17 15:49:09 PDT
Unable to mute the video on Hulu.com
Attachments
Eric Carlson
Comment 1 2024-10-17 15:49:17 PDT
Eric Carlson
Comment 2 2024-10-17 16:02:22 PDT
EWS
Comment 3 2024-10-28 10:09:57 PDT
Committed 285768@main (43bf134a6b6a): <https://commits.webkit.org/285768@main> Reviewed commits have been landed. Closing PR #35385 and removing active labels.
EWS
Comment 4 2024-12-02 11:02:18 PST
Committed 283286.538@safari-7620-branch (7f894e132c95): <https://commits.webkit.org/283286.538@safari-7620-branch> Reviewed commits have been landed. Closing PR #2336 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.