[iPad] Unable to mute the video on hulu.com https://bugs.webkit.org/show_bug.cgi?id=281697 rdar://126096361

Reviewed by NOBODY (OOPS!).

Mute implicitly when volume is set to zero on iOS, where we don't have per-element audio
volume control so custom controls at sites like hulu.com that use volume to mute and unmute
will work.

* LayoutTests/TestExpectations: Skip test everywhere.
* LayoutTests/media/implicit-muted-when-volume-is-zero-expected.txt: Added.
* LayoutTests/media/implicit-muted-when-volume-is-zero.html: Added.
* LayoutTests/platform/ios/TestExpectations: Run test on iOS only.

* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::HTMLMediaElement): Drive-by change, remove unused member
variable `m_initiallyMuted`.
(WebCore::HTMLMediaElement::setReadyState): Ditto.
(WebCore::HTMLMediaElement::volume const): Return 0 when implicitly muted.
(WebCore::HTMLMediaElement::setVolume): Mute implicitly when volume set to 0, clear
implicit mute when volume set to anything else.
(WebCore::HTMLMediaElement::muted const): Return true when implicitly muted.
(WebCore::HTMLMediaElement::setMuted): Pass flag to setMutedInternal so it runs the update
logic even when `m_muted` doesn't change bug implicit muted does.
(WebCore::HTMLMediaElement::setMutedInternal):
* Source/WebCore/html/HTMLMediaElement.h: